--- a/opentreemap/treemap/css/sass/partials/_navbar.scss
+++ b/opentreemap/treemap/css/sass/partials/_navbar.scss
@@ -5,6 +5,7 @@
 
     @media (max-width: 979px) {
         margin-bottom: 0;
+        position: absolute;
     }
 
     .navbar-inner {
